--- a/index.html
+++ b/index.html
@@ -32,14 +32,12 @@
         <div class="inner">
             <center><h1>Linux Tweet App!</h1></center>
 
-            <center><img src="./linux.png"></img>
+            <center><img src="./self-image.jpg"></img>
                 <P>
 
-                You've successfully deployed the Linux tweet app! Why not let the world know?
+                I am Brian Le, and this is my website
 
                 <p>
-
-            <a href="https://twitter.com/intent/tweet?button_hashtag=#Docker" class="twitter-hashtag-button" data-size="large" data-text="I'm learning how to deploy #Docker containers." data-url="http://www.docker.com" data-lang="en" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     </body>
 
